--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -1,1 +1,29 @@
-clash://install-config?url=https://mirror.ghproxy.com/https://raw.githubusercontent.com/Aopex/Hub/main/Clash/%E5%96%9D%E7%B2%A5%E7%9A%84%E6%A2%AF%E5%AD%90
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clash订阅导入</title>
+    <!-- 引入Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <style>
+        /* 可以添加一些自定义的CSS来进一步美化按钮 */
+        .import-btn {
+            display: block;
+            width: 200px;
+            margin: 50px auto;
+            padding: 10px;
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body>
+    <!-- 按钮元素 -->
+    <a href="clash://install-config?url=https://mirror.ghproxy.com/https://raw.githubusercontent.com/Aopex/Hub/main/Clash/%E5%96%9D%E7%B2%A5%E7%9A%84%E6%A2%AF%E5%AD%90" class="btn btn-primary import-btn">导入Clash订阅</a>
+
+    <!-- 引入Bootstrap JS和依赖的Popper.js和jQuery -->
+    <script src="https://cdn.staticfile.org/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</body>
+</html>
