--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #000;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
         }
         .button-container {
             position: relative;
@@ -55,14 +55,15 @@
 
         const particlesArray = [];
         const numberOfParticles = 100;
+        const speedReduction = 0.3; // Adjust this value to slow down the particles
 
         class Particle {
             constructor() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
                 this.size = Math.random() * 5 + 1;
-                this.speedX = Math.random() * 3 - 1.5;
-                this.speedY = Math.random() * 3 - 1.5;
+                this.speedX = (Math.random() * 3 - 1.5) * speedReduction;
+                this.speedY = (Math.random() * 3 - 1.5) * speedReduction;
             }
             update() {
                 this.x += this.speedX;
