--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -14,6 +14,13 @@
             align-items: center;
             height: 100vh;
             background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            animation: gradient 10s ease infinite;
+            background-size: 400% 400%;
+        }
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
         .button-container {
             position: relative;
@@ -64,14 +71,18 @@
                 this.size = Math.random() * 5 + 1;
                 this.speedX = (Math.random() * 3 - 1.5) * speedReduction;
                 this.speedY = (Math.random() * 3 - 1.5) * speedReduction;
+                this.opacity = Math.random() * 0.5 + 0.3; // Initial opacity between 0.3 and 0.8
             }
             update() {
                 this.x += this.speedX;
                 this.y += this.speedY;
-                if (this.size > 0.2) this.size -= 0.1;
+                if (this.x > canvas.width) this.x = 0;
+                if (this.x < 0) this.x = canvas.width;
+                if (this.y > canvas.height) this.y = 0;
+                if (this.y < 0) this.y = canvas.height;
             }
             draw() {
-                ctx.fillStyle = 'rgba(255, 255, 255, 0.8)';
+                ctx.fillStyle = `rgba(255, 255, 255, ${this.opacity})`;
                 ctx.beginPath();
                 ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
                 ctx.closePath();
