--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -13,8 +13,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-            animation: gradient 10s ease infinite;
+            background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb, #a18cd1, #fbc2eb, #fbc2eb);
+            animation: gradient 15s ease infinite;
             background-size: 400% 400%;
         }
         @keyframes gradient {
@@ -27,20 +27,20 @@
             z-index: 1;
         }
         .import-button {
-            background: rgba(255, 127, 80, 0.8);
+            background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
             color: white;
-            padding: 15px 30px;
+            padding: 15px 40px;
             border: none;
-            border-radius: 5px;
+            border-radius: 30px;
             font-size: 18px;
             cursor: pointer;
-            transition: background 0.3s, backdrop-filter 0.3s;
+            transition: background 0.3s, transform 0.3s;
             text-decoration: none;
-            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
         .import-button:hover {
-            background: rgba(255, 99, 71, 0.8);
-            backdrop-filter: blur(15px);
+            background: linear-gradient(90deg, #92FE9D 0%, #00C9FF 100%);
+            transform: scale(1.05);
         }
         canvas {
             position: absolute;
