--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -27,19 +27,20 @@
             z-index: 1;
         }
         .import-button {
-            background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+            background: rgba(255, 255, 255, 0.2);
             color: white;
-            padding: 15px 40px;
+            padding: 15px 30px;
             border: none;
-            border-radius: 30px;
+            border-radius: 8px;
             font-size: 18px;
             cursor: pointer;
-            transition: background 0.3s, transform 0.3s;
+            transition: background 0.3s, backdrop-filter 0.3s, transform 0.3s;
             text-decoration: none;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
         .import-button:hover {
-            background: linear-gradient(90deg, #92FE9D 0%, #00C9FF 100%);
+            background: rgba(255, 255, 255, 0.3);
             transform: scale(1.05);
         }
         canvas {
