--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -13,14 +13,14 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb, #a18cd1, #fbc2eb, #fbc2eb);
+            background: radial-gradient(circle at top left, #9890e3, #b1f4cf);
             animation: gradient 15s ease infinite;
-            background-size: 400% 400%;
+            background-size: 200% 200%;
         }
         @keyframes gradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+            0% { background-position: 0% 0%; }
+            50% { background-position: 100% 100%; }
+            100% { background-position: 0% 0%; }
         }
         .button-container {
             position: relative;
