--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="button-container">
-        <h1 style="color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">喝粥的梯子</h1>
+        <h1 style="color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">喝粥的梯子</h1></br>
         <a class="import-button" href="clash://install-config?url=https://mirror.ghproxy.com/https://raw.githubusercontent.com/Aopex/Hub/main/Clash/%E5%96%9D%E7%B2%A5%E7%9A%84%E6%A2%AF%E5%AD%90">导入Clash订阅</a>
     </div>
     <canvas id="canvas"></canvas>
