--- a/function/importClashUrl.html
+++ b/function/importClashUrl.html
@@ -16,6 +16,7 @@
             background: radial-gradient(circle at top left, #9890e3, #b1f4cf);
             animation: gradient 15s ease infinite;
             background-size: 200% 200%;
+            position: relative;
         }
         @keyframes gradient {
             0% { background-position: 0% 0%; }
@@ -25,6 +26,7 @@
         .button-container {
             position: relative;
             z-index: 1;
+            text-align: center;
         }
         .import-button {
             background: rgba(255, 255, 255, 0.2);
@@ -52,9 +54,36 @@
 </head>
 <body>
     <div class="button-container">
-        <h1 style="color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">喝粥的梯子</h1></br>
+        <h1 style="color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);">喝粥的梯子</h1>
+        <p id="update-date" style="font-size: 20px; color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">正在查询…</p><br>
         <a class="import-button" href="clash://install-config?url=https://mirror.ghproxy.com/https://raw.githubusercontent.com/Aopex/Hub/main/Clash/%E5%96%9D%E7%B2%A5%E7%9A%84%E6%A2%AF%E5%AD%90">导入Clash订阅</a>
     </div>
+    <script>
+        async function fetchUpdateDate() {
+            const owner = 'Aopex';
+            const repo = 'Hub';
+            const filePath = 'Clash/喝粥的梯子';
+            const url = `https://api.github.com/repos/${owner}/${repo}/commits?path=${filePath}&per_page=1`;
+
+            try {
+                const response = await fetch(url);
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const data = await response.json();
+                const latestCommit = data[0];
+                const updateDate = new Date(latestCommit.commit.committer.date).toLocaleString();
+
+                document.getElementById('update-date').innerHTML = `喝粥的Clash配置<br>已于 ${updateDate} 更新`;
+            } catch (error) {
+                console.error('Fetch error:', error);
+                document.getElementById('update-date').innerHTML = '我也不知道喝粥上次更新Clash配置文件是什么时候了<br>ㄟ( ▔, ▔ )ㄏ';
+            }
+        }
+
+        fetchUpdateDate();
+    </script>
     <canvas id="canvas"></canvas>
     <script>
         const canvas = document.getElementById('canvas');
